force-app/main/default/objects/Happiness__c/Happiness__c.object-meta.xml
<CustomObject>
    <label>Happiness</label>
    <nameField>
        <label>Happiness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Happiness</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>