force-app/main/default/objects/Happiness__c/fields/Account_Sentiment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Sentiment_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-2584</description>
    <label>Account Sentiment Summary</label>
    <type>Checkbox</type>
</CustomField>