force-app/main/default/objects/Happiness__c/fields/Action_after_bad_NPS__c.field-meta.xml
<CustomField>
    <fullName>Action_after_bad_NPS__c</fullName>
    <label>Legacy - Action after bad NPS</label>
    <type>TextArea</type>
</CustomField>