force-app/main/default/objects/Happiness__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Job Optimisation Section</description>
    <label>Benefits</label>
    <type>Checkbox</type>
</CustomField>