force-app/main/default/objects/Happiness__c/fields/Customer_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Customer_Coaching__c</fullName>
    <label>Customer Coaching</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>