force-app/main/default/objects/Happiness__c/fields/Customer_Happiness__c.field-meta.xml
<CustomField>
    <fullName>Customer_Happiness__c</fullName>
    <formula>(Processing_Time__c + Handling_of_Recruiting_Portal__c + Optimization_Advice__c + Personal_Support__c )/ 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Customer Happiness</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>