force-app/main/default/objects/Happiness__c/fields/Customer_Product_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Sentiment_Score__c</fullName>
    <description>RO-2584</description>
    <label>Customer Product Sentiment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>