force-app/main/default/objects/Happiness__c/fields/Customer_Service_Sentiment_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Sentiment_Feedback__c</fullName>
    <description>RO-2584</description>
    <label>Customer Service Sentiment Feedback</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>