force-app/main/default/objects/Happiness__c/fields/Customer_Survey_Tag_Categories__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Tag_Categories__c</fullName>
    <description>RO-2584</description>
    <label>Customer Survey Tag Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Survey_Tag_Categories</valueSetName>
    </valueSet>
</CustomField>