force-app/main/default/objects/Happiness__c/fields/General_Account_Sentiment_Summary__c.field-meta.xml
<CustomField>
    <fullName>General_Account_Sentiment_Summary__c</fullName>
    <description>RO-2584</description>
    <label>General Account Sentiment Summary</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>