force-app/main/default/objects/Happiness__c/fields/Handling_of_Recruiting_Portal__c.field-meta.xml
<CustomField>
    <fullName>Handling_of_Recruiting_Portal__c</fullName>
    <label>Legacy - Handling of Recruiting Portal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>