force-app/main/default/objects/Happiness__c/fields/NPS_Detractor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Detractor__c</fullName>
    <formula>IF( NPS__c &lt; 7,  Weight__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>