force-app/main/default/objects/Happiness__c/fields/NPS_Feedback_120__c.field-meta.xml
<CustomField>
    <fullName>NPS_Feedback_120__c</fullName>
    <label>Legacy - NPS Feedback 120</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>