force-app/main/default/objects/Happiness__c/fields/NPS_Passive_unweighted__c.field-meta.xml
<CustomField>
    <fullName>NPS_Passive_unweighted__c</fullName>
    <formula>IF( AND( NPS__c &lt; 9, NPS__c &gt; 6 ), 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Passive unweighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>