force-app/main/default/objects/Happiness__c/fields/NPS_Promoter__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter__c</fullName>
    <formula>IF( NPS__c &gt; 8,  Weight__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>