force-app/main/default/objects/Happiness__c/fields/NPS_Promoter_unweighted__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter_unweighted__c</fullName>
    <formula>IF( NPS__c &gt; 8, 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Promoter unweighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>