force-app/main/default/objects/Happiness__c/fields/NPS_Typeform_Token_ID__c.field-meta.xml
<CustomField>
    <fullName>NPS_Typeform_Token_ID__c</fullName>
    <description>RO-2257</description>
    <inlineHelpText>Stores the Token ID related to the Typeform submission</inlineHelpText>
    <label>NPS Typeform Token ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>