force-app/main/default/objects/Happiness__c/fields/Optimization_Advice__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Advice__c</fullName>
    <label>Legacy - Optimisation Advice</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>