force-app/main/default/objects/Happiness__c/fields/Other_Recruiting_Channels__c.field-meta.xml
<CustomField>
    <fullName>Other_Recruiting_Channels__c</fullName>
    <description>Recruiting channels that perform better than Heyjobs.RO-1152</description>
    <inlineHelpText>Recruiting channels that perform better than Heyjobs.</inlineHelpText>
    <label>Legacy - Other Recruiting Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>StepStone</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>meinestadt.de</fullName>
            </value>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>Jobspreader by wollmilchsau</fullName>
            </value>
            <value>
                <fullName>Karrie.at</fullName>
            </value>
            <value>
                <fullName>hokify</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>