force-app/main/default/objects/Happiness__c/fields/Performance_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Performance_Comparison__c</fullName>
    <description>Heyjobs Performance in comparison with other recruiting channels, RO-1152</description>
    <inlineHelpText>Heyjobs Performance in comparison with other recruiting channels</inlineHelpText>
    <label>Legacy - Performance Comparison</label>
    <type>TextArea</type>
</CustomField>