force-app/main/default/objects/Happiness__c/fields/Performance_Passive__c.field-meta.xml
<CustomField>
    <fullName>Performance_Passive__c</fullName>
    <formula>IF( AND( Performance__c &gt; 6, Performance__c &lt; 9),  Weight__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Performance Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>