force-app/main/default/objects/Happiness__c/fields/Performance_Promoter__c.field-meta.xml
<CustomField>
    <fullName>Performance_Promoter__c</fullName>
    <formula>IF( Performance__c &gt; 8,  Weight__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Performance Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>