force-app/main/default/objects/Happiness__c/fields/Personal_Support__c.field-meta.xml
<CustomField>
    <fullName>Personal_Support__c</fullName>
    <label>Legacy - Personal Support</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>