force-app/main/default/objects/Happiness__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time__c</fullName>
    <label>Legacy - Processing Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>