force-app/main/default/objects/Happiness__c/fields/RP_Recruiter_Role__c.field-meta.xml
<CustomField>
    <fullName>RP_Recruiter_Role__c</fullName>
    <description>RO-2257</description>
    <inlineHelpText>Stores the role of the recruiter who submitted the survey</inlineHelpText>
    <label>RP Recruiter Role</label>
    <length>60</length>
    <type>Text</type>
</CustomField>