force-app/main/default/objects/Happiness__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Legacy - Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>