force-app/main/default/objects/Happiness__c/fields/Service_Passive__c.field-meta.xml
<CustomField>
    <fullName>Service_Passive__c</fullName>
    <formula>IF( AND( Service__c &lt; 9, Service__c &gt; 6 ),  Weight__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Service Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>