force-app/main/default/objects/Happiness__c/fields/Service_Promoter__c.field-meta.xml
<CustomField>
    <fullName>Service_Promoter__c</fullName>
    <formula>IF( Service__c &gt; 8,  Weight__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Service Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>