force-app/main/default/objects/Happiness__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date of customer satisfaction submission</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>