force-app/main/default/objects/Happiness__c/fields/Weighted_NPS__c.field-meta.xml
<CustomField>
    <fullName>Weighted_NPS__c</fullName>
    <formula>NPS__c *  Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>