force-app/main/default/objects/Happiness__c/fields/Weighted_Performance__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Performance__c</fullName>
    <formula>Performance__c *  Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Weighted Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>