force-app/main/default/objects/Happiness__c/fields/Weighted_Service__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Service__c</fullName>
    <formula>Service__c *  Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Weighted Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>